--- a/deployments/liqo/subcharts/tunnelEndpointCreator/templates/tunnelEndpointCreator.yaml
+++ b/deployments/liqo/subcharts/tunnelEndpointCreator/templates/tunnelEndpointCreator.yaml
@@ -13,9 +13,17 @@ rules:
     - ""
     resources:
     - nodes
+    - secrets
+    - pods
+    - services
     verbs:
+    - create
+    - delete
     - get
     - list
+    - patch
+    - update
+    - watch
 
   - apiGroups:
     - net.liqo.io
