--- a/.github/workflows/rebase.yml
+++ b/.github/workflows/rebase.yml
@@ -1,37 +1,38 @@
 name: Rebase
 on:
-  issue_comment:
-     types: [created]
+  repository_dispatch:
+    types:
+      - rebase-command
+
 jobs:
   rebase:
     name: Rebase
-    if: github.event.issue.pull_request != '' && contains(github.event.comment.body, '/rebase')
     runs-on: ubuntu-latest
-    steps:
 
-      - uses: actions/checkout@master
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
         with:
           fetch-depth: 0
-          token: ${{ secrets.CI_TOKEN }}
+          persist-credentials: false
 
-      - name: Automatic Rebase
-        uses: cirrus-actions/rebase@1.3
+      - name: Automatic rebase
+        uses: giorio94/rebase@1.3.2
         env:
           GITHUB_TOKEN: ${{ secrets.CI_TOKEN }}
 
-      - name: Create comment (Success)
+      - name: Set the reaction for the comment
+        id: rebase_reaction
+        run: |
+          [[ ${{ job.status }} == 'success' ]] && \
+            echo ::set-output name=reaction::hooray || \
+            echo ::set-output name=reaction::confused
+        if: always()
+
+      - name: Report status as reaction
         uses: peter-evans/create-or-update-comment@v1
         with:
           token: ${{ secrets.CI_TOKEN }}
-          issue-number: ${{ github.event.issue.number }}
-          body: |
-            Rebase status: ${{ job.status  }}!
-          reactions: '+1'
+          comment-id: ${{ github.event.client_payload.github.payload.comment.id }}
+          reactions: '${{ steps.rebase_reaction.outputs.reaction }}'
         if: always()
-
-  always_job:
-    name: Always run job
-    runs-on: ubuntu-latest
-    steps:
-      - name: Always run
-        run: echo "This job is used to prevent the workflow to fail when all other jobs are skipped."
