--- a/deployments/liqo/crds/discovery.liqo.io_foreignclusters.yaml
+++ b/deployments/liqo/crds/discovery.liqo.io_foreignclusters.yaml
@@ -35,6 +35,9 @@ spec:
               apiUrl:
                 description: URL where to contact foreign API server
                 type: string
+              authUrl:
+                description: URL where to contact foreign Auth service
+                type: string
               clusterIdentity:
                 description: Foreign Cluster Identity
                 properties:
@@ -58,6 +61,7 @@ spec:
                 type: string
             required:
             - apiUrl
+            - authUrl
             - clusterIdentity
             - discoveryType
             - join
@@ -66,6 +70,15 @@ spec:
           status:
             description: ForeignClusterStatus defines the observed state of ForeignCluster
             properties:
+              authStatus:
+                default: Pending
+                description: Authentication status
+                enum:
+                - Pending
+                - Accepted
+                - Refused
+                - EmptyRefused
+                type: string
               incoming:
                 properties:
                   advertisementStatus:
@@ -329,6 +342,31 @@ spec:
                   remote-peering-request-name:
                     description: Name of created PR
                     type: string
+                  roleRef:
+                    description: Object Reference to obtained role
+                    properties:
+                      apiVersion:
+                        description: API version of the referent.
+                        type: string
+                      fieldPath:
+                        description: 'If referring to a piece of an object instead of an entire object, this string should contain a valid JSON/Go field access statement, such as desiredState.manifest.containers[2]. For example, if the object reference is to a container within a pod, this would take on a value like: "spec.containers{name}" (where "name" refers to the name of the container that triggered the event) or if no container name is specified "spec.containers[2]" (container with index 2 in this pod). This syntax is chosen only to have some well-defined way of referencing a part of an object. TODO: this design is not final and this field is subject to change in the future.'
+                        type: string
+                      kind:
+                        description: 'Kind of the referent. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
+                        type: string
+                      name:
+                        description: 'Name of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names'
+                        type: string
+                      namespace:
+                        description: 'Namespace of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/namespaces/'
+                        type: string
+                      resourceVersion:
+                        description: 'Specific resourceVersion to which this reference is made, if any. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#concurrency-control-and-consistency'
+                        type: string
+                      uid:
+                        description: 'UID of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#uids'
+                        type: string
+                    type: object
                 required:
                 - joined
                 type: object
