--- a/deployments/liqo/templates/clusterconfig.yaml
+++ b/deployments/liqo/templates/clusterconfig.yaml
@@ -32,6 +32,8 @@ spec:
     port: 6443
     service: _liqo._tcp
     ttl: 90
+  authConfig:
+    allowEmptyToken: true
   liqonetConfig:
     podCIDR: {{ .Values.podCIDR }}
     serviceCIDR: {{ .Values.serviceCIDR }}
