--- a/deployments/liqo/subcharts/authService/templates/auth-service-deploy.yaml
+++ b/deployments/liqo/subcharts/authService/templates/auth-service-deploy.yaml
@@ -29,6 +29,15 @@ rules:
     verbs:
       - create
       - delete
+  - apiGroups:
+      - config.liqo.io
+    resources:
+      - clusterconfigs
+    verbs:
+      - get
+      - list
+      - watch
+      - create
 
   # required to grant permissions
   - apiGroups:
@@ -40,6 +49,7 @@ rules:
       - create
       - delete
       - update
+      - delete
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
@@ -55,6 +65,7 @@ rules:
       - list
       - watch
       - create
+      - delete
   - apiGroups:
       - ""
     resources:
@@ -64,6 +75,7 @@ rules:
       - list
       - watch
       - create
+      - delete
   - apiGroups:
       - rbac.authorization.k8s.io
     resources:
